--- a/library-rest-api/src/main/resources/application.properties
+++ b/library-rest-api/src/main/resources/application.properties
@@ -10,4 +10,4 @@ logging.level.root=INFO
 logging.level.org.hibernate=ERROR
 logging.file.max-history=2
 logging.file.max-size=1MB
-logging.file=library-rest-api/log.log
+logging.path=library-rest-api/logs
