--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	<modules>
 		<module>library-rest-api</module>
 		<module>library-client-react-main</module>
+		<module>library-client-react-books</module>
 	</modules>
 
 	<parent>
@@ -30,10 +31,50 @@
 
 	<build>
 		<plugins>
+
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>com.github.eirslett</groupId>
+				<artifactId>frontend-maven-plugin</artifactId>
+				<!-- NB! Set <version> to the latest released version of frontend-maven-plugin, like in README.md -->
+				<version>1.6</version>
+
+				<configuration>
+					<installDirectory>target</installDirectory>
+				</configuration>
+
+				<executions>
+
+					<execution>
+						<id>install node and yarn</id>
+						<goals>
+							<goal>install-node-and-yarn</goal>
+						</goals>
+						<configuration>
+							<nodeVersion>v8.11.3</nodeVersion>
+							<yarnVersion>v1.9.4</yarnVersion>
+						</configuration>
+					</execution>
+
+					<execution>
+						<id>yarn install</id>
+						<goals>
+							<goal>yarn</goal>
+						</goals>
+						<configuration>
+							<arguments>install</arguments>
+						</configuration>
+					</execution>
+
+				</executions>
+			</plugin>
+
 		</plugins>
+
 	</build>
+
 </project>
