--- a/library-client-react-main/.gitignore
+++ b/library-client-react-main/.gitignore
@@ -8,6 +8,7 @@
 
 # production
 /target
+/build
 
 # misc
 .DS_Store
@@ -15,6 +16,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+package-lock.json
+yarn.lock
 
 npm-debug.log*
 yarn-debug.log*
