library-client-react-main: favicon.ico, BeSmart-logo.svg library-client-reactstrap: новый тестовый клиентский модуль с reactstrap (компоненты реакта на основе bootstrap)

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 		<module>library-client-react-main</module>
 		<module>library-client-react-books</module>
 		<module>library-client-react-npm-books</module>
+		<module>library-client-reactstrap</module>
 	</modules>
 
 	<parent>
