--- a/library-client-react-npm-books/package.json
+++ b/library-client-react-npm-books/package.json
@@ -16,7 +16,7 @@
     "babel-runtime": "^6.26.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3003 &&  react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
