--- a/library-client-reactstrap/package.json
+++ b/library-client-reactstrap/package.json
@@ -10,7 +10,7 @@
     "reactstrap": "^6.4.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3004 &&  react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
