--- a/library-client-react-main/package.json
+++ b/library-client-react-main/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.22.2",
     "react": "^16.5.1",
+    "react-datepicker": "^1.6.0",
     "react-dom": "^16.5.1",
     "react-js-pagination": "^3.0.2",
-    "react-scripts": "1.1.5"
+    "react-moment": "^0.8.1",
+    "react-scripts": "1.1.5",
+    "react-transition-group": "1.x"
   },
   "scripts": {
     "start": "set PORT=3001 &&  react-scripts start",
