--- a/library-rest-api/src/main/resources/application.properties
+++ b/library-rest-api/src/main/resources/application.properties
@@ -1,9 +1,14 @@
-spring.datasource.url=jdbc:mysql://192.168.56.200:3306/aplib
-spring.datasource.username=aplib_owner
-spring.datasource.password=4
-spring.jpa.generate-ddl=false
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.liquibase.change-log=classpath:db/changelog/liquibase_changelog.xml
+#spring.datasource.url=jdbc:mysql://192.168.56.200:3306/aplib
+#spring.datasource.username=aplib_owner
+#spring.datasource.password=4
+#spring.jpa.generate-ddl=false
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.liquibase.change-log=classpath:db/changelog/liquibase_changelog.xml
+spring.datasource.url=jdbc:hsqldb:file:~/db/aplib
+spring.datasource.username=developer
+spring.datasource.password=developer
+spring.jpa.generate-ddl=true
+
 
 logging.level.root=INFO
 #logging.level.org.springframework.web=DEBUG
