--- a/library-client-react-main/package.json
+++ b/library-client-react-main/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.5.1",
     "react-js-pagination": "^3.0.2",
     "react-moment": "^0.8.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-transition-group": "1.x",
     "recompose": "^0.30.0"
