--- a/library-client-react-main/package.json
+++ b/library-client-react-main/package.json
@@ -3,9 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "moment": "^2.22.2",
     "react": "^16.5.1",
-    "react-datepicker": "^1.6.0",
+    "react-calendar": "^2.17.4",
     "react-dom": "^16.5.1",
     "react-js-pagination": "^3.0.2",
     "react-moment": "^0.8.1",
