mvc authorization without react

--- a/library-rest-api/src/main/resources/application.properties
+++ b/library-rest-api/src/main/resources/application.properties
@@ -16,3 +16,9 @@ logging.level.org.hibernate=ERROR
 logging.file.max-history=2
 logging.file.max-size=1MB
 logging.path=library-rest-api/logs
+
+# ==============================================================
+# = Spring Security / Queries for AuthenticationManagerBuilder
+# ==============================================================
+spring.queries.users-query=select email, password, active from user where email=?
+spring.queries.roles-query=select u.email, r.role from user u inner join user_role ur on(u.user_id=ur.user_id) inner join role r on(ur.role_id=r.role_id) where u.email=?
